add pkg path and winston

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
-    "axios": "^1.5.1"
+    "axios": "^1.5.1",
+    "path": "^0.12.7",
+    "winston": "^3.11.0"
   },
   "main": "src/functions/*.js"
 }
